--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
-  "name": "task-manager",
+  "name": "taskmanager",
   "version": "1.0.0",
-  "description": "Assignment 1 for backend engineering launchpad",
-  "main": "index.js",
+  "description": "A RESTful API for managing tasks using Node.js and Express.js",
+  "main": "app.js",
   "scripts": {
-    "pretest": "node -e \"if (process.version.slice(1).split('.')[0] < 18) { console.error('Unsupported Node.js version, please use version 18'); process.exit(1); }\"",
-    "test": "tap test/*.js --disable-coverage"
+    "start": "node app.js",
+    "test": "jest --verbose",
+    "dev": "nodemon app.js"
   },
-  "author": "Airtribe",
+  "keywords": [
+    "nodejs",
+    "express",
+    "restful-api",
+    "task-manager",
+    "crud"
+  ],
+  "author": "Student",
   "license": "ISC",
-  "devDependencies": {
-    "supertest": "^6.3.4",
-    "tap": "^18.6.1"
-  },
   "dependencies": {
     "express": "^4.18.2"
   },
-  "engines": {
-    "node": ">= 18.0.0"
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.11",
+    "supertest": "^6.3.4"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/test.js"
+    ]
   }
 }
